min-max-replicas/k8srequireddeploymentreplicas_template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name:  k8srequireddeploymentreplicas
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredDeploymentReplicas
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            replicas:
              type: int32
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequireddeploymentreplicas

        violation[{"msg": msg, "details": {"Required number of replicas ": required}}] {
          namespace := input.review.object.metadata.namespace
          required := to_number( data.inventory.cluster["v1"].Namespace[namespace]["metadata"]["annotations"]["replicas-min"])
          input.review.object.kind == "Deployment"
          provided := input.review.object.spec.replicas
          required > provided
          msg := sprintf("Forbidden number of replicas: %v", [provided])
        }

        violation[{"msg": msg, "details": {"Required number of replicas ": required}}] {
          namespace := input.review.object.metadata.namespace
          required := to_number( data.inventory.cluster["v1"].Namespace[namespace]["metadata"]["annotations"]["replicas-max"])
          input.review.object.kind == "Deployment"
          provided := input.review.object.spec.replicas
          required < provided
          msg := sprintf("Forbidden number of replicas: %v", [provided])
        }
